--- a/infrastructure/build-cfn.yml
+++ b/infrastructure/build-cfn.yml
@@ -1,15 +1,15 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Serverless Weather Application Build Pipeline
+Description: Build Pipeline
 
 Parameters:
+  CodeBuildImage:
+    Type: String
   GitHubToken:
     Type: String
   GitHubUser:
     Type: String
-    Default: symphoniacloud
   GitHubRepository:
     Type: String
-    Default: faster-continous-deployment
   GitHubBranch:
     Type: String
     Default: master
@@ -20,21 +20,6 @@ Parameters:
 
 Resources:
 
-  CodeBuildImageRepository:
-    Type: AWS::ECR::Repository
-    Properties:
-      RepositoryPolicyText:
-        Version: "2012-10-17"
-        Statement:
-          - Sid: AllowPull
-            Effect: Allow
-            Principal:
-              Service: "codebuild.amazonaws.com"
-            Action:
-              - "ecr:GetDownloadUrlForLayer"
-              - "ecr:BatchGetImage"
-              - "ecr:BatchCheckLayerAvailability"
-
   CodeBuildProject:
       Type: AWS::CodeBuild::Project
       DependsOn: CodeBuildRole
@@ -43,7 +28,7 @@ Resources:
           Type: CODEPIPELINE
         Environment:
           ComputeType: BUILD_GENERAL1_SMALL
-          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${CodeBuildImageRepository}:${AWS::StackName}"
+          Image: !Ref CodeBuildImage
           Type: LINUX_CONTAINER
           EnvironmentVariables:
           - Name: CFN_PACKAGE_S3_BUCKET
@@ -51,6 +36,7 @@ Resources:
         ServiceRole: !Ref CodeBuildRole
         Source:
           Type: CODEPIPELINE
+          BuildSpec: infrastructure/app-buildspec.yml
 
   CodePipeline:
     Type: AWS::CodePipeline::Pipeline
@@ -125,17 +111,8 @@ Resources:
             StackName: !Ref ApplicationStackName
           RunOrder: 2
 
-  SourceBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      VersioningConfiguration:
-        Status: Enabled
-
   ArtifactBucket:
     Type: AWS::S3::Bucket
-    Properties:
-      VersioningConfiguration:
-        Status: Enabled
 
   CfnBucket:
     Type: AWS::S3::Bucket
@@ -178,10 +155,3 @@ Resources:
           Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AdministratorAccess #TODO: Reduce permissions
-
-Outputs:
-  CodeBuildImage:
-    Description: Docker image (from ECR) used by CodeBuild
-    Export:
-      Name: ServerlessWeatherCodeBuildImage
-    Value: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${CodeBuildImageRepository}:${AWS::StackName}"
